--- a/app/public/home.html
+++ b/app/public/home.html
@@ -35,7 +35,7 @@
 
         <footer class="footer">
             <div class="container">
-                <p><a href="/api/friends">API Friends List</a> | <a href="https://github.com/afhaque/friendfinder">GitHub
+                <p><a href="/api/friends">API Friends List</a> | <a href="https://github.com/RichD3478/FriendFinder/blob/master/app/data/friends.js">GitHub
                         Repo</a></p>
             </div>
         </footer>
