--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -157,7 +157,7 @@
         <hr>
         <footer class="footer">
             <div class="container">
-                <p><a href="/api/friends">API Friends List</a> | <a href="https://github.com/RichD3478/FriendFinder">GitHub
+                <p><a href="/api/friends">API Friends List</a> | <a href="https://github.com/RichD3478/FriendFinder/blob/master/app/data/friends.js">GitHub
                         Repo</a></p>
             </div>
         </footer>
@@ -174,7 +174,7 @@
                 </div>
                 <div class="modal-body">
                     <h2 id="match-name"></h2>
-                    <img id="match-img" src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/6/005/064/1bd/3435aa3.jpg"
+                    <img id="match-img" src="https://peopledotcom.files.wordpress.com/2018/02/will-smith.jpg"
                         alt="">
                 </div>
                 <div class="modal-footer">
